UI updates and firebase db integrated
